Changed Next Step -> Next Steps.

--- a/docs/create/azure/portal/index-azure-portal.mdx
+++ b/docs/create/azure/portal/index-azure-portal.mdx
@@ -58,7 +58,7 @@ Please note that you can have multiple clients connected to a Redis database at 
 </div>
 
 
-### Next Step
+### Next Steps
 
 - [Getting Started with .Net and Redis](/develop/dotnet/)
 - [Best Practices for Azure Cache for Redis](https://docs.microsoft.com/en-in/azure/azure-cache-for-redis/cache-best-practices)
