--- a/docs/create/cloud/rediscloud/index-recloud.mdx
+++ b/docs/create/cloud/rediscloud/index-recloud.mdx
@@ -63,7 +63,7 @@ Click "Activate" and wait for few seconds till it gets activated. Once fully act
 ![My Image](images/launch_database.png)
 
 
-### Next Step
+### Next Steps
 
 - [Connecting to the database using RedisInsight](/explore/redisinsight/)
 - [How to list & search Movies database using Redisearch](/howtos/moviesdatabase/getting-started/)
