--- a/docs/howtos/redisbloom/index-redisbloom.mdx
+++ b/docs/howtos/redisbloom/index-redisbloom.mdx
@@ -149,7 +149,7 @@ Use BF.MEXISTS to determine if one or more items may exist in the filter or not:
 In the above example, the first command shows the result as “1” for both the visitors’ IP addresses, indicating that these items do exist. The second command displays "0" for one of the visitor’s IP addresses, indicating that the item certainly does not exist.
 
 
-### Next Step 
+### Next Steps
 
 - Learn more about RedisBloom in the [Quick Start](https://oss.redis.com/redisbloom/Quick_Start/) tutorial.
 - [How to build a Fraud Detection System using RedisGears and RedisBloom](https://developer.redis.com/howtos/frauddetection/)
