--- a/docs/howtos/redistimeseries/getting-started/index-redistimeseries.mdx
+++ b/docs/howtos/redistimeseries/getting-started/index-redistimeseries.mdx
@@ -204,7 +204,7 @@ You can use various aggregation types such as  avg, sum, min, max, range, count,
    2) "2.2"
 ```
 
-### Next Step 
+### Next Steps 
 
 - Learn more about RedisTimeSeries in the [Quickstart](https://oss.redis.com/redistimeseries/) tutorial.
 - [Build Your Financial Application on RedisTimeSeries](https://redis.com/blog/build-your-financial-application-on-redistimeseries/)
