--- a/docs/modules/redisearch/index-redisearch.mdx
+++ b/docs/modules/redisearch/index-redisearch.mdx
@@ -130,7 +130,7 @@ You can also search “action” movies that contain “star” in the index (in
 The FT.SEARCH command is the base command to search your database, it has many options and is associated with a powerful and rich query syntax that you can find in the documentation. (Note: You can also use the index to do data aggregation using the FT.AGGREGATE command.)
 
 
-### Next Step
+### Next Steps
 
 - Learn more about RediSearch in the [Getting Started with RediSearch 2.0](https://github.com/RediSearch/redisearch-getting-started/)  tutorial on GitHub.
 - [How to list and search Movie database using Redisearch](/howtos/moviesdatabase/getting-started)
