--- a/docs/modules/redisgraph/index-redisgraph.mdx
+++ b/docs/modules/redisgraph/index-redisgraph.mdx
@@ -175,7 +175,7 @@ Click on the Execute button, and double click on the actors to follow the relati
 ![RedisGraph](redisgraph4.png)
 
 
-### Next Step 
+### Next Steps 
 
 - Learn more about RedisGraph in the [Quickstart](https://oss.redis.com/redisgraph/) tutorial.
 
