--- a/docs/create/heroku/herokujava/index-herokujava.mdx
+++ b/docs/create/heroku/herokujava/index-herokujava.mdx
@@ -123,7 +123,7 @@ Open https://hidden-woodland-03996.herokuapp.com/ to see your application
 
 
 
-### Next Step
+### Next Steps
 
 - [Connecting to the database using RedisInsight](/explore/redisinsight/)
 - [How to list & search Movies database using Redisearch](/howtos/moviesdatabase/getting-started/)
