--- a/docs/create/heroku/herokunodejs/index-herokunodejs.mdx
+++ b/docs/create/heroku/herokunodejs/index-herokunodejs.mdx
@@ -115,7 +115,7 @@ Open https://rocky-lowlands-06306.herokuapp.com/   to see your application
 
 ![heroku](heroku_ratelimiter.png)
 
-### Next Step
+### Next Steps
 
 - [Connecting to the database using RedisInsight](/explore/redisinsight/)
 - [How to list & search Movies database using Redisearch](/howtos/moviesdatabase/getting-started/)
