--- a/docs/howtos/redisgraph/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisgraph/getting-started/index-gettingstarted.mdx
@@ -236,7 +236,7 @@ Click on the Execute button, and double click on the actors to follow the relati
 </div>
 
 
-### Next Step 
+### Next Steps
 
 - [Building Movies database app using RedisGraph and NodeJS](/howtos/redisgraphmovies/)
 - Learn more about RedisGraph in the [Quickstart](https://oss.redis.com/redisgraph/3) tutorial.
