--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -20,9 +20,8 @@ Check out these upcoming streams:
 | Wednesday, June 15 | 4:00 PM UTC  | [Simon Prickett][simon]                          | Up and Running with the RU102PY Redis University Course|
 | Wednesday, June 15 | 5:00 PM UTC  | [Simon Prickett][simon]                          | Up and Running with the RU102JS Redis University Course|
 | Thursday, June 16  | 3:00 PM UTC  | [Simon Prickett][simon], [Suze Shardlow][suze]   | Counting Things At Scale with Redis                    |
-| Friday, June 17    | 6:00 PM UTC  | [Guy Royse][guy]                                 | Graph, Graph, and Graph: Attorneys at Law              |
 | Wednesday, June 29 | 6:00 PM UTC  | [Steve Lorello][steve]                           | Real-Time Stock Analytics with Redis Stack and .NET    |
-| Friday, June 30    | 6:00 PM UTC  | [Guy Royse][guy]                                 | Graph, Graph, and Graph: Attorneys at Law              |
+| Thursday, June 30  | 6:00 PM UTC  | [Savannah Norem][savannah], [Guy Royse][guy]     | Comparing Sets, Bloom Filters, and Cuckoo Filters      |
 | Wednesday, July 6  | 6:00 PM UTC  | [Steve Lorello][steve]                           | Real-Time Stock Analytics with Redis Stack and .NET    |
 | Friday, July 8     | 6:00 PM UTC  | [Brian Sam-Bodden][brian], [Guy Royse][guy]      | Extending Redis with Rust                              |
 | Wednesday, July 13 | 6:00 PM UTC  | [Steve Lorello][steve]                           | Real-Time Stock Analytics with Redis Stack and .NET    |
@@ -44,6 +43,7 @@ Sometimes we're on the road speaking at in-person events or enjoying a well dese
 [brian]: https://twitter.com/bsbodden
 [guy]: https://twitter.com/guyroyse
 [justin]: https://twitter.com/JustCastilla
+[savannah]: https://twitter.com/sav_norem
 [simon]: https://twitter.com/simon_prickett
 [steve]: https://twitter.com/slorello
 [suze]: https://twitter.com/SuzeShardlow
