isEditable: false -> custom_edit_url: null

--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -4,7 +4,7 @@ title: Redis DEVcember
 sidebar_label: DEVcember
 slug: /devcember/
 authors: [suze,simon]
-isEditable: false
+custom_edit_url: null
 useNextPrev: false
 ---
 ## What's it all About?
@@ -13,7 +13,7 @@ We're excited to announce DEVcember, a month-long festival of live online events
 
 [Join us on Twitch](https://www.twitch.tv/redisinc) or [YouTube](https://www.youtube.com/c/Redisinc/videos) for a daily 15-20 minute live stream on Monday to Friday where we'll introduce Redis concepts, share projects that you can contribute to and have some fun banter.  For Saturday and Sunday, we’ll give you a mini challenge to complete.
 
-Don't worry if you miss a stream - we'll post them on [YouTube](https://www.youtube.com/c/Redisinc/videos) and embed them in the schedule below.  
+Don't worry if you miss a stream - we'll post them on [YouTube](https://www.youtube.com/c/Redisinc/videos) and embed them in the schedule below.
 
 **The fun begins Wednesday 1st December 2021 at 9am UTC.**
 
