--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -4,7 +4,7 @@ title: Hacktoberfest 2021 at Redis
 sidebar_label: Start Here
 slug: /hacktoberfest/
 authors: [suze,simon]
-isEditable: false
+custom_edit_url: null
 useNextPrev: false
 ---
 
