--- a/docs/operate/redis-at-scale/high-availability/exercise-1/index-exercise-1.mdx
+++ b/docs/operate/redis-at-scale/high-availability/exercise-1/index-exercise-1.mdx
@@ -3,7 +3,7 @@ id: index-exercise-1
 title: 3.2 Exercise - Enabling Basic Replication
 sidebar_label: 3.2 Exercise - Enabling Basic Replication
 slug: /operate/redis-at-scale/high-availability/exercise-1
-isEditable: false
+custom_edit_url: null
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
@@ -64,7 +64,7 @@ $ redis-server ./replica.conf
 Open two terminal tabs and use them to start connections to the primary and replica instances:
 ```bash
 # Tab 1 (primary)
-$ redis-cli 
+$ redis-cli
 ```
 ```bash
 # Tab 2 (replica)
