--- a/docs/operate/redis-at-scale/high-availability/understanding-sentinels/index-understanding-sentinels.mdx
+++ b/docs/operate/redis-at-scale/high-availability/understanding-sentinels/index-understanding-sentinels.mdx
@@ -3,7 +3,7 @@ id: index-understanding-sentinels
 title: 3.3 Understanding Sentinels
 sidebar_label: 3.3 Understanding Sentinels
 slug: /operate/redis-at-scale/high-availability/understanding-sentinels
-isEditable: false
+custom_edit_url: null
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
