--- a/docs/operate/redis-at-scale/observability/introduction/index-introduction.mdx
+++ b/docs/operate/redis-at-scale/observability/introduction/index-introduction.mdx
@@ -3,7 +3,7 @@ id: index-introduction
 title: 5.0 Introduction to Observability
 sidebar_label: 5.0 Introduction to Observability
 slug: /operate/redis-at-scale/observability/introduction
-isEditable: false
+custom_edit_url: null
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
@@ -24,10 +24,7 @@ Some of the question you always want to be able to answer include:
 - Is Redis performing the way we expect?
 - When failures occur… what exactly happened to Redis?
 
-Then of course you must ask... 
+Then of course you must ask...
 - <strong>How can I find this out ahead of time?</strong>
 
 Let's dig into these questions and more as we look into observability with Redis.
-
-
-
