--- a/docs/operate/redis-at-scale/persistence-and-durability/exercise/index-exercise.mdx
+++ b/docs/operate/redis-at-scale/persistence-and-durability/exercise/index-exercise.mdx
@@ -3,7 +3,7 @@ id: index-exercise
 title: '2.2 Exercise: Saving a Snapshot'
 sidebar_label: '2.2 Exercise: Saving a Snapshot'
 slug: /operate/redis-at-scale/persistence-and-durability/exercise
-isEditable: false
+custom_edit_url: null
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
