--- a/docs/operate/redis-at-scale/scalability/exercise-1/index-exercise-1.mdx
+++ b/docs/operate/redis-at-scale/scalability/exercise-1/index-exercise-1.mdx
@@ -3,7 +3,7 @@ id: index-exercise-1
 title: 4.1 Exercise - Creating a Redis Cluster
 sidebar_label: 4.1 Exercise - Creating a Redis Cluster
 slug: /operate/redis-at-scale/scalability/exercise-1
-isEditable: false
+custom_edit_url: null
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
@@ -178,7 +178,7 @@ Ready to move 4096 slots.
 	Moving slot 5461 from 5b4e4be56158cf6103ffa3035024a8d820337973
 	Moving slot 5462 from 5b4e4be56158cf6103ffa3035024a8d820337973
 
-Do you want to proceed with the proposed reshard plan (yes/no)? 
+Do you want to proceed with the proposed reshard plan (yes/no)?
 Moving slot 5461 from 127.0.0.1:7001 to 127.0.0.1:7006:
 Moving slot 5462 from 127.0.0.1:7001 to 127.0.0.1:7006:
 Moving slot 5463 from 127.0.0.1:7001 to 127.0.0.1:7006:
