--- a/docs/operate/redis-at-scale/scalability/redis-cli-with-redis-cluster/index-redis-cli-with-redis-cluster.mdx
+++ b/docs/operate/redis-at-scale/scalability/redis-cli-with-redis-cluster/index-redis-cli-with-redis-cluster.mdx
@@ -3,7 +3,7 @@ id: index-redis-cli-with-redis-cluster
 title: 4.2 Using Redis-CLI with a Redis Cluster
 sidebar_label: 4.2 Using Redis-CLI with a Redis Cluster
 slug: /operate/redis-at-scale/scalability/redis-cli-with-redis-cluster
-isEditable: false
+custom_edit_url: null
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
