--- a/docs/operate/redis-at-scale/scalability/redis-cluster-and-client-libraries/index-redis-cluster-and-client-libraries.mdx
+++ b/docs/operate/redis-at-scale/scalability/redis-cluster-and-client-libraries/index-redis-cluster-and-client-libraries.mdx
@@ -3,7 +3,7 @@ id: index-redis-cluster-and-client-libraries
 title: 4.3 Redis Cluster and Client Libraries
 sidebar_label: 4.3 Redis Cluster and Client Libraries
 slug: /operate/redis-at-scale/scalability/redis-cluster-and-client-libraries
-isEditable: false
+custom_edit_url: null
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
