--- a/docs/operate/redis-at-scale/talking-to-redis/configuring-a-redis-server/index-configuring-a-redis-server.mdx
+++ b/docs/operate/redis-at-scale/talking-to-redis/configuring-a-redis-server/index-configuring-a-redis-server.mdx
@@ -3,7 +3,7 @@ id: index-configuring-a-redis-server
 title: 1.2 Configuring a Redis Server
 sidebar_label: 1.2 Configuring a Redis Server
 slug: /operate/redis-at-scale/talking-to-redis/configuring-a-redis-server
-isEditable: false
+custom_edit_url: null
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
@@ -41,4 +41,3 @@ It is possible to reconfigure a running Redis server without stopping or restart
 Not all the configuration directives are supported in this way, but you can check the output of the command `CONFIG GET *` first for a list of all the supported ones.
 
 Note that modifying the configuration on the fly has no effects on the `redis.conf` file so at the next restart of Redis the old configuration will be used instead. If you want to force update the `redis.conf` file with your current configuration settings you can run the `CONFIG REWRITE` command, which will automatically scan your `redis.conf` file and update the fields which don't match the current configuration value.
-
