--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -3,7 +3,7 @@ id: index-redis-live
 title: Redis Live
 sidebar_label: Redis Live
 slug: /redis-live/
-isEditable: false
+custom_edit_url: null
 ---
 
 Redis Live hosts a variety of live-streamed content on [Twitch](https://www.twitch.tv/redisinc) and occasionally [YouTube](https://www.youtube.com/redisinc). Follow us to get notified when we go live. And, you know, like and subscribe.
