--- a/docs/operate/redis-at-scale/high-availability/exercise-2/index-exercise-2.mdx
+++ b/docs/operate/redis-at-scale/high-availability/exercise-2/index-exercise-2.mdx
@@ -3,7 +3,7 @@ id: index-exercise-2
 title: 3.4 Exercise - Sentinel Hands-on
 sidebar_label: 3.4 Exercise - Sentinel Hands-on
 slug: /operate/redis-at-scale/high-availability/exercise-2
-isEditable: false
+custom_edit_url: null
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
@@ -34,7 +34,7 @@ sentinel auth-pass myprimary a_strong_password
 
 - `port` - The port on which the Sentinel should run
 - `sentinel monitor` - monitor the Primary on a specific IP address and port. Having the address of the Primary the Sentinels will be able to discover all the replicas on their own. The last argument on this line is the number of Sentinels needed for quorum. In our example - the number is 2.
-- `sentinel down-after-milliseconds`  - how many milliseconds should an instance be unreachable so that it’s considered down 
+- `sentinel down-after-milliseconds`  - how many milliseconds should an instance be unreachable so that it’s considered down
 - `sentinel failover-timeout` - if a Sentinel voted another Sentinel for the failover of a given master, it will wait this many milliseconds to try to failover the same master again.
 - `sentinel auth-pass` - In order for Sentinels to connect to Redis server instances when they are configured with `requirepass`, the Sentinel configuration must include the sentinel auth-pass directive.
 
