--- a/docs/operate/redis-at-scale/persistence-and-durability/index-persistence-and-durability.mdx
+++ b/docs/operate/redis-at-scale/persistence-and-durability/index-persistence-and-durability.mdx
@@ -4,7 +4,7 @@ title: Ensuring Persistence & Durability in Redis
 sidebar_label: Persistence & Durability
 slug: /operate/redis-at-scale/persistence-and-durability
 authors: [justin]
-isEditable: false
+custom_edit_url: null
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
