--- a/docs/operate/redis-at-scale/talking-to-redis/command-line-tool/index-command-line-tool.mdx
+++ b/docs/operate/redis-at-scale/talking-to-redis/command-line-tool/index-command-line-tool.mdx
@@ -3,7 +3,7 @@ id: index-command-line-tool
 title: '1.1 The Command Line Tool: Redis-CLI'
 sidebar_label: '1.1 The Command Line Tool: Redis-CLI'
 slug: /operate/redis-at-scale/talking-to-redis/command-line-tool
-isEditable: false
+custom_edit_url: null
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
@@ -15,19 +15,16 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 <br />
 <p>Redis-cli is a command line tool used to interact with the Redis server. Most package managers include redis-cli as part of the redis package.  It can also be compiled from source, and you'll find the source code in the Redis repository on GitHub.</p>
 
-There are two ways to use redis-cli : 
-- an <b>interactive</b> mode where the user types commands and sees the replies; 
+There are two ways to use redis-cli :
+- an <b>interactive</b> mode where the user types commands and sees the replies;
 - a <b>command</b> mode where the command is provided as an argument to redis-cli, executed, and results sent to the standard output.
 
 Let’s use the CLI to connect to a Redis server running at <b>172.22.0.3</b>  and port <b>7000</b>. The arguments -h and -p are used to specify the host and port to connect to. They  can be omitted if your server is running on the default host "localhost" port 6379.
 
 The redis-cli provides some useful productivity features. For example, you can scroll through your command history by pressing the up and down arrow keys. You can also use the TAB key to autocomplete a command, saving even more keystrokes. Just type the first few letters of a command and keep pressing TAB until the command you want appears on screen.
 
-Once you have the command name you want, the CLI will display syntax hints about the arguments so you don’t have to remember all of them, or open up the Redis command documentation. 
+Once you have the command name you want, the CLI will display syntax hints about the arguments so you don’t have to remember all of them, or open up the Redis command documentation.
 
 These three tips can save you a lot of time and take you a step closer to being a power user.
 
 You can do much more with redis-cli, like sending output to a file, scanning for big keys, get continuous stats, monitor commands and so on. For a much more detailed explanation refer to the [documentation](https://redis.io/docs/manual/cli/).
-
-
-
