--- a/docs/operate/redis-at-scale/talking-to-redis/index-talking-to-redis.mdx
+++ b/docs/operate/redis-at-scale/talking-to-redis/index-talking-to-redis.mdx
@@ -4,7 +4,7 @@ title: Talking to Redis
 sidebar_label: Talking to Redis
 slug: /operate/redis-at-scale/talking-to-redis
 authors: [justin]
-isEditable: false
+custom_edit_url: null
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
