--- a/docs/operate/redis-at-scale/talking-to-redis/initial-tuning/index-initial-tuning.mdx
+++ b/docs/operate/redis-at-scale/talking-to-redis/initial-tuning/index-initial-tuning.mdx
@@ -3,7 +3,7 @@ id: index-initial-tuning
 title: 1.5 Initial Tuning
 sidebar_label: 1.5 Initial Tuning
 slug: /operate/redis-at-scale/talking-to-redis/initial-tuning
-isEditable: false
+custom_edit_url: null
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
@@ -23,7 +23,7 @@ maxclients 20000
 By default, Redis has no max memory limit, so it will use all available system memory. If you are using replication, you will want to limit the memory usage in order to have overhead for replica output buffers. It’s also a good idea to leave memory for the system. Something like 25% overhead. You can update this setting in Redis config file:
 
 ```bash
-# memory size in bytes  
+# memory size in bytes
 maxmemory 1288490188
 ```
 
@@ -35,12 +35,12 @@ Redis passes this configuration as the second parameter of the `listen(int s, in
 If you have many connections, you will need to set this higher than the default of 511. You can update this in Redis config file:
 
 ```bash
-# TCP listen() backlog. 
-# 
-# In high requests-per-second environments you need an high backlog in order 
-# to avoid slow clients connections issues. Note that the Linux kernel 
-# will silently truncate it to the value of /proc/sys/net/core/somaxconn so 
-# make sure to raise both the value of somaxconn and tcp_max_syn_backlog 
+# TCP listen() backlog.
+#
+# In high requests-per-second environments you need an high backlog in order
+# to avoid slow clients connections issues. Note that the Linux kernel
+# will silently truncate it to the value of /proc/sys/net/core/somaxconn so
+# make sure to raise both the value of somaxconn and tcp_max_syn_backlog
 # in order to get the desired effect.
 tcp-backlog 65536
 ```
@@ -88,12 +88,12 @@ Here's an example on Ubuntu using systemd:
 
 ```bash
 /etc/systemd/system/redis.service
-[Service] 
-... 
-User=redis 
-Group=redis 
+[Service]
 ...
-LimitNOFILE=65536 
+User=redis
+Group=redis
+...
+LimitNOFILE=65536
 ...
 ```
 
