--- a/docs/operate/redis-at-scale/talking-to-redis/redis-clients/index-redis-clients.mdx
+++ b/docs/operate/redis-at-scale/talking-to-redis/redis-clients/index-redis-clients.mdx
@@ -3,7 +3,7 @@ id: index-redis-clients
 title: 1.3 Redis Clients
 sidebar_label: 1.3 Redis Clients
 slug: /operate/redis-at-scale/talking-to-redis/redis-clients
-isEditable: false
+custom_edit_url: null
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
@@ -20,9 +20,8 @@ Client libraries perform the following duties:
 - Provide an idiomatic API for using Redis commands from a particular programming language
 
 ## Managing the connection to Redis
-Redis clients communicate with the Redis server over TCP, using a protocol called [RESP](https://redis.io/docs/reference/protocol-spec/) (REdis Serialization Protocol) designed specifically for Redis. 
+Redis clients communicate with the Redis server over TCP, using a protocol called [RESP](https://redis.io/docs/reference/protocol-spec/) (REdis Serialization Protocol) designed specifically for Redis.
 
 The RESP protocol is simple and text-based, so it is easily read by humans, as well as machines. A common request/response would look something like this. Note that we're using netcat here to send raw protocol:
 
 This simple, well documented protocol has resulted in Redis clients for almost every language you can think of. The [redis.io](https://redis.io/docs/clients/) client page lists over 200 client libraries for more than 50 programming languages.
-
