useNextPrev -> pagination_next+pagination_prev

--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -5,7 +5,8 @@ sidebar_label: DEVcember
 slug: /devcember/
 authors: [suze, simon]
 custom_edit_url: null
-useNextPrev: false
+pagination_next: null
+pagination_prev: null
 ---
 
 ## What's it all About?
