--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -5,7 +5,8 @@ sidebar_label: Start Here
 slug: /hacktoberfest/
 authors: [suze, simon]
 custom_edit_url: null
-useNextPrev: false
+pagination_next: null
+pagination_prev: null
 ---
 
 [Hacktoberfest](https://hacktoberfest.digitalocean.com/) is a month-long online festival which takes place every year in October. It is sponsored by [DigitalOcean](https://www.digitalocean.com/) and aims to encourage people to get involved in open source projects.
