--- a/docs/howtos/redisgraph/explore-python-code/index-explorepythoncode.mdx
+++ b/docs/howtos/redisgraph/explore-python-code/index-explorepythoncode.mdx
@@ -66,7 +66,7 @@ Load your project's code with the pycograph load command:
  pycograph load --project-dir compose
 ```
 
-<b>Results</b>:{' '}
+<b>Results</b>:
 
 ```bash
  Graph successfully updated.
@@ -120,12 +120,13 @@ Functions called by the Docker Compose top level commands up and run
     target="_blank"
     rel="noopener"
     className="link">
-    {' '}
+
     <img
       src="/img/launchpad.png"
       className="thumb"
       loading="lazy"
       alt="Redis Launchpad"
     />
+
   </a>
 </div>
