--- a/docs/howtos/redisjson/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisjson/getting-started/index-gettingstarted.mdx
@@ -251,7 +251,7 @@ A JSON object can also have another object. Here is a simple example of a JSON o
 >> JSON.SET employee_info . ' { "firstName": "Alpha",         "lastName": "K", "age": 23,        "address" : {            "streetAddress": "110 Fulbourn Road Cambridge",  "city": "San Francisco", "state": "California", "postalCode": "94016"  } } '
 ```
 
-<b>Command</b>:{' '}
+<b>Command</b>:
 
 ```
 >> JSON.GET employee_info
@@ -278,12 +278,13 @@ A JSON object can also have another object. Here is a simple example of a JSON o
     target="_blank"
     rel="noopener"
     className="link">
-    {' '}
+
     <img
       src="/img/launchpad.png"
       className="thumb"
       loading="lazy"
       alt="Redis Launchpad"
     />
+
   </a>
 </div>
