--- a/docs/operate/redis-at-scale/talking-to-redis/redis-server-overview/index-redis-server-overview.mdx
+++ b/docs/operate/redis-at-scale/talking-to-redis/redis-server-overview/index-redis-server-overview.mdx
@@ -23,7 +23,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 <p>
   As you might already know, Redis is an open source data structure server
   written in C. You can store multiple data types, like strings, hashes, and
-  streams and access them by a unique key name.{' '}
+  streams and access them by a unique key name.
 </p>
 
 For example, if you have a string value “Hello World” saved under the key name “greeting”, you can access it by running the <b>GET</b> command followed by the key name - greeting. All keys in a Redis database are stored in a flat keyspace. There is no enforced schema or naming policy, and the responsibility for organizing the keyspace is left to the developer.
