--- a/docs/develop/deno/index-deno.mdx
+++ b/docs/develop/deno/index-deno.mdx
@@ -111,12 +111,13 @@ OK
     target="_blank"
     rel="noopener"
     className="link">
-    {' '}
+
     <img
       src="/img/launchpad.png"
       className="thumb"
       loading="lazy"
       alt="Redis Launchpad"
     />
+
   </a>
-</div>{' '}
+</div>
