--- a/docs/develop/php/index-php.mdx
+++ b/docs/develop/php/index-php.mdx
@@ -103,12 +103,13 @@ OK
     target="_blank"
     rel="noopener"
     className="link">
-    {' '}
+
     <img
       src="/img/launchpad.png"
       className="thumb"
       loading="lazy"
       alt="Redis Launchpad"
     />
+
   </a>
-</div>{' '}
+</div>
